--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
   "nativescript": {
     "id": "org.nativescript.intervalTimer",
     "tns-android": {
-      "version": "2.5.0"
+      "version": "3.0.0"
     }
   },
   "dependencies": {
     "@angular/animations": "~4.0.0",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
+    "@angular/common": "^4.1.2",
+    "@angular/compiler": "^4.1.2",
+    "@angular/core": "^4.1.2",
+    "@angular/forms": "^4.1.2",
+    "@angular/http": "^4.1.2",
+    "@angular/platform-browser": "^4.1.2",
     "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "nativescript-angular": "~1.5.1",
+    "@angular/router": "^4.1.2",
+    "nativescript-angular": "^3.0.0",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "~5.2.0",
-    "tns-core-modules": "2.5.2",
-    "zone.js": "~0.8.2"
+    "rxjs": "^5.4.0",
+    "tns-core-modules": "^3.0.1",
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
     "babel-traverse": "6.4.5",
@@ -32,7 +32,7 @@
     "babylon": "6.4.5",
     "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
-    "nativescript-dev-typescript": "~0.3.5",
-    "typescript": "~2.1.0"
+    "nativescript-dev-typescript": "^0.4.4",
+    "typescript": "^2.3.2"
   }
 }
