--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.intervalTimer",
     "tns-android": {
-      "version": "3.0.1"
+      "version": "3.2.0"
     }
   },
   "dependencies": {
@@ -23,7 +23,7 @@
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
     "rxjs": "^5.4.0",
-    "tns-core-modules": "^3.0.1",
+    "tns-core-modules": "^3.2.0",
     "zone.js": "^0.8.10"
   },
   "devDependencies": {
@@ -34,5 +34,6 @@
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "^0.4.4",
     "typescript": "^2.3.2"
-  }
+  },
+  "name": "intervalTimer"
 }
